dataset1235/2025-2/2868285114/users/756942405/executions/2135592949_3221148872.log
== SUBMISSION (2025-08-12 22:51:00)
-- CODE: 
print("75")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 22:50:50)
-- CODE: 
pint("75")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pint("75")
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pint("75")
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
